--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,13 @@
         android:background="@color/colorPrimary"
         android:textColor="@color/branco"/>
 
+    <Button
+        android:id="@+id/deletarBt"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10sp"
+        android:text="@string/deletar"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/branco"/>
+
 </LinearLayout>
