--- a/app/src/main/res/layout/activity_deletar_livros.xml
+++ b/app/src/main/res/layout/activity_deletar_livros.xml
@@ -142,22 +142,24 @@
 
             <Button
                 android:id="@+id/deletarDBt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120sp"
+                android:layout_height="40sp"
                 android:background="@color/colorPrimary"
                 android:text="@string/deletar"
                 android:textColor="@color/branco"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                android:layout_marginTop="20sp"/>
 
             <Button
                 android:id="@+id/cancelarDBt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120sp"
+                android:layout_height="40sp"
                 android:layout_marginLeft="10sp"
                 android:background="@color/colorPrimary"
                 android:text="@string/cancelar"
                 android:textColor="@color/branco"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                android:layout_marginTop="20sp"/>
         </LinearLayout>
 
     </LinearLayout>
