--- a/app/src/main/res/layout/activity_listar_livros.xml
+++ b/app/src/main/res/layout/activity_listar_livros.xml
@@ -146,8 +146,8 @@
         <Button
             android:id="@+id/anterior"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ANTERIOR"
+            android:layout_height="40sp"
+            android:text="@string/anterior"
             android:visibility="visible"
             android:background="@color/colorPrimary"
             android:textColor="@color/branco"
@@ -157,8 +157,8 @@
         <Button
             android:id="@+id/proximo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="PRÓXIMO"
+            android:layout_height="40sp"
+            android:text="@string/proximo"
             android:visibility="visible"
             android:layout_gravity="bottom"
             android:background="@color/colorPrimary"
