--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,4 +53,13 @@
         android:background="@color/colorPrimary"
         android:textColor="@color/branco"/>
 
+    <Button
+        android:id="@+id/recyclerViewBt"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10sp"
+        android:background="@color/colorPrimary"
+        android:text="@string/recycler_view"
+        android:textColor="@color/branco" />
+
 </LinearLayout>
