--- a/app/src/main/res/layout/livro_layout.xml
+++ b/app/src/main/res/layout/livro_layout.xml
@@ -9,14 +9,14 @@
         android:id="@+id/imgLivro"
         android:layout_width="10dp"
         android:layout_height="100dp"
-        android:layout_weight="3"
+        android:layout_weight="2"
         android:foreground="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="7"
+        android:layout_weight="6"
         android:layout_marginTop="10dp">
 
         <LinearLayout
@@ -25,16 +25,12 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/titulo" />
-
-            <TextView
                 android:id="@+id/nomeLivro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"/>
+                android:layout_marginLeft="5dp"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -44,35 +40,18 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/autor" />
-
-            <TextView
                 android:id="@+id/nomeAutor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"/>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/nota"/>
-
-            <TextView
-                android:id="@+id/notaLivro"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"/>
-        </LinearLayout>
     </LinearLayout>
+
+    <RatingBar
+        android:id="@+id/notaL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 
 </LinearLayout>
