layout livro inflater

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="black">#000000</color>
     <color name="grey">#e0e0e0</color>
     <color name="branco">#fff</color>
+    <color name="dourado">#FFD700</color>
 </resources>
