--- a/app/src/main/res/layout/livro_layout.xml
+++ b/app/src/main/res/layout/livro_layout.xml
@@ -2,39 +2,45 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="5sp">
 
 
     <ImageView
         android:id="@+id/imgLivro"
-        android:layout_width="10dp"
-        android:layout_height="100dp"
-        android:layout_weight="2"
-        android:foreground="@mipmap/ic_launcher" />
+        android:layout_width="57dp"
+        android:layout_height="79dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight="4"
+        app:srcCompat="@drawable/lendo" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="6"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20sp">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_marginLeft="5sp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/nomeLivro"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:textSize="18sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:layout_marginLeft="5sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -46,12 +52,15 @@
                 android:layout_marginLeft="5dp"/>
         </LinearLayout>
 
-    </LinearLayout>
+        <RatingBar
+            android:id="@+id/notaLivro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="false"
+            android:progressTint="@color/dourado"
+            android:isIndicator="true"/>
 
-    <RatingBar
-        android:id="@+id/notaL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1" />
+    </LinearLayout>
 
 </LinearLayout>
