--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,4 +62,13 @@
         android:text="@string/recycler_view"
         android:textColor="@color/branco" />
 
+    <Button
+        android:id="@+id/swipeDragDropBt"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10sp"
+        android:background="@color/colorPrimary"
+        android:text="@string/swipe_e_dragdrop"
+        android:textColor="@color/branco" />
+
 </LinearLayout>
