--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="grey">#e0e0e0</color>
     <color name="branco">#fff</color>
     <color name="dourado">#FFD700</color>
+    <color name="red">#ff0000</color>
 </resources>
