--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <Button
         android:id="@+id/cadastrarBt"
         android:layout_width="175dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:background="@color/colorPrimary"
         android:text="@string/cadastrar_novo"
         android:textColor="@color/branco" />
@@ -20,7 +20,7 @@
     <Button
         android:id="@+id/listarBt"
         android:layout_width="175dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginTop="10sp"
         android:background="@color/colorPrimary"
         android:text="@string/listar_livros"
@@ -29,7 +29,7 @@
     <Button
         android:id="@+id/buscarBt"
         android:layout_width="175dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginTop="10sp"
         android:background="@color/colorPrimary"
         android:text="@string/buscar"
@@ -38,7 +38,7 @@
     <Button
         android:id="@+id/deletarBt"
         android:layout_width="175dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginTop="10sp"
         android:background="@color/colorPrimary"
         android:text="@string/deletar"
@@ -47,16 +47,25 @@
     <Button
         android:id="@+id/listViewBt"
         android:layout_width="175dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginTop="10sp"
         android:background="@color/colorPrimary"
         android:text="@string/list_view"
         android:textColor="@color/branco" />
 
     <Button
+        android:id="@+id/gridViewBt"
+        android:layout_width="175dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10sp"
+        android:background="@color/colorPrimary"
+        android:text="@string/gridview"
+        android:textColor="@color/branco" />
+
+    <Button
         android:id="@+id/recyclerViewBt"
         android:layout_width="175dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginTop="10sp"
         android:background="@color/colorPrimary"
         android:text="@string/recycler_view"
@@ -65,7 +74,7 @@
     <Button
         android:id="@+id/swipeDragDropBt"
         android:layout_width="175dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginTop="10sp"
         android:background="@color/colorPrimary"
         android:text="@string/swipe_e_dragdrop"
@@ -75,7 +84,7 @@
     <Button
         android:id="@+id/pageViewBt"
         android:layout_width="175dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginTop="10sp"
         android:background="@color/colorPrimary"
         android:text="@string/pageview"
